force-app/main/default/objects/OfflinePrices__c/OfflinePrices__c.object-meta.xml
<CustomObject>
    <description>Tabela de preços do Offline</description>
    <label>Preços Offline</label>
    <nameField>
        <label>Nome de Preços Offline</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Preços Offline</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>