force-app/main/default/objects/OfflinePrices__c/fields/CustomIdTxt__c.field-meta.xml
<CustomField>
    <fullName>CustomIdTxt__c</fullName>
    <externalId>true</externalId>
    <label>Id Customizado</label>
    <length>30</length>
    <type>Text</type>
</CustomField>