force-app/main/default/objects/OfflinePrices__c/fields/DeliveryStateTxt__c.field-meta.xml
<CustomField>
    <fullName>DeliveryStateTxt__c</fullName>
    <label>Estado Destino</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>State</valueSetName>
    </valueSet>
</CustomField>