force-app/main/default/objects/OfflinePrices__c/fields/ICMS_CTD__c.field-meta.xml
<CustomField>
    <fullName>ICMS_CTD__c</fullName>
    <label>ICMS CTD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>