force-app/main/default/objects/OfflinePrices__c/fields/ProductCodeFml__c.field-meta.xml
<CustomField>
    <fullName>ProductCodeFml__c</fullName>
    <formula>ProductLkp__r.ProductCodeTxt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código do Produto</label>
    <type>Text</type>
</CustomField>