force-app/main/default/objects/OfflinePrices__c/fields/ProductLkp__c.field-meta.xml
<CustomField>
    <fullName>ProductLkp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Preços Offline</relationshipLabel>
    <relationshipName>ProductLkp</relationshipName>
    <type>Lookup</type>
</CustomField>