force-app/main/default/objects/OfflinePrices__c/fields/SalesOfficeLkp__c.field-meta.xml
<CustomField>
    <fullName>SalesOfficeLkp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Escritório de Vendas</label>
    <referenceTo>SalesOffice__c</referenceTo>
    <relationshipLabel>Preços Offline</relationshipLabel>
    <relationshipName>SalesOfficeLkp</relationshipName>
    <type>Lookup</type>
</CustomField>