force-app/main/default/objects/OfflinePrices__c/fields/SalesOfficeNameFml__c.field-meta.xml
<CustomField>
    <fullName>SalesOfficeNameFml__c</fullName>
    <formula>SalesOfficeLkp__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome do Escritório de Vendas</label>
    <type>Text</type>
</CustomField>