force-app/main/default/objects/OfflinePrices__c/fields/UnitPriceNmb__c.field-meta.xml
<CustomField>
    <fullName>UnitPriceNmb__c</fullName>
    <description>Valor Bruto sem IPI, sem ICMS</description>
    <label>Valor Bruto s/ IPI</label>
    <precision>18</precision>
    <required>true</required>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>