force-app/main/default/objects/OfflinePrices__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SalesOrganizationTxt__c</columns>
    <columns>SalesOfficeLkp__c</columns>
    <columns>DeliveryStateTxt__c</columns>
    <columns>ProductLkp__c</columns>
    <columns>UnitPriceNmb__c</columns>
    <columns>ICMS__c</columns>
    <columns>ICMS_CTD__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>